[tool.poetry]
name = "covid"
version = "0.1.0"
description = "COVID-19 data analysis"
authors = ["Dan Egnor <egnor@ofb.net>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"
requests-cache = "^0.5.2"
pandas = "^1.0.5"
us = "^2.0.2"
matplotlib = "^3.2.2"
yattag = "^1.13.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
