[tool.poetry]
name = "covid"
version = "0.1.0"
description = "COVID-19 data analysis"
authors = ["Dan Egnor <egnor@ofb.net>"]

[tool.poetry.scripts]
make_site = 'covid.make_site:main'

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"
pandas = "^1.0.5"
us = "^2.0.2"
matplotlib = "^3.3"
cachecontrol = {extras = ["filecache"], version = "^0.12.6"}
mplcairo = "^0.3"
dominate = "^2.5.1"
pycountry = "^20.7.3"
cartopy = "^0.18.0"
scipy = "^1.5.2"
moviepy = "^1.0.3"
numpy = "^1.19.1"
pyreadr = "^0.3.4"
xlrd = "^1.2.0"
beautifulsoup4 = "^4.9.2"
addfips = "^0.2.2"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.3"
toml = "^0.10.1"
wheel = "^0.34.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
